2020-09-21  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 3.0.1-SNAPSHOT.

2020-09-03  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 3.0.0.

2020-08-07  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added advertise(RootDevice,int,URI) method to manage NOTIFY
	messages and M-SEARCH responses for root devices.

	* src/main/java/ball/upnp/RootDevice.java:
	Added getConfigId() and getMaxAge() methods.

2020-08-06  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added multicast() and send() "without delay" variant methods.

	* src/main/java/ball/upnp/RootDevice.java:
	Added notify(BiConsumer<URI,URI>) default method.

2020-08-05  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPRequest.java,
	src/main/java/ball/upnp/ssdp/SSDPResponse.java:
	Added header(String,Number) method.

	* Support UPnP 2.0 Discovery.

	* src/main/java/ball/upnp/ant/taskdefs/SSDPTask.java:
	Added support for "product" attribute (with default value).

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
	Changed Map entry value type to SSDPMessage.

	* src/main/java/ball/upnp/ssdp/SSDPMessage.java:
	Added getExpiration() method to interface and provided
	implementations in concrete subclasses.

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added product parameter to sole constructor.  Added getUserAgent()
	and msearch(int,URI) methods.

2020-07-31  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/SSDP.java:
	Added getUSNMap() and getUSN(URI) interface methods and static
	matches(URI,URI) and matches(URI) methods to compare NT to STs.
	Added the corresponding implementations in the class hierarchy.

2020-07-30  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/SSDP.java:
	Initial writing.  Common interface in Device and Service hierarchy
	to support UPnP Discovery.  Implemented methods in subclasses.
